:sparkles: feat: support github personal token
